--- a/Endabgabe/package.json
+++ b/Endabgabe/package.json
@@ -11,7 +11,5 @@
   "devDependencies": {
     "@types/node": "^14.14.25"
   },
-  "dependencies": {
-    "axios": "^0.21.1"
-  }
+  "dependencies": {}
 }
